
Turn on taint checking for specgen.
----------------------------------------------------------------------
Tue Sep 26 16:11:16 2006                        Michael Jennings (mej)

Better checking for instroot paths when installing files.

More robust execution of rpm --eval subcommand.

Check basenames, not full paths, when looking for .#* and *~.
----------------------------------------------------------------------
Tue Oct  3 18:04:58 2006                        Michael Jennings (mej)

Taint fixes brought to light by specgen going -T.
----------------------------------------------------------------------
Fri Oct  6 22:17:57 2006                        Michael Jennings (mej)

Trying to import packages whose names begin with numbers would fail
because the vendor/release tags (and any other CVS tag) are forbidden
to begin with a number.  So the SCM::CVS module now strips leading
non-letter characters from tags.
----------------------------------------------------------------------
Wed Oct 11 17:53:35 2006                        Michael Jennings (mej)

Cosmetic tweak of debugging output.
----------------------------------------------------------------------
Thu Feb 22 20:48:32 2007                        Michael Jennings (mej)

Fixed horde3 package template.

Fixed permissions problem with chrooted builds.
----------------------------------------------------------------------
Tue Feb 27 16:30:05 2007                        Michael Jennings (mej)

Fix copyright years.
----------------------------------------------------------------------
Tue Feb 27 17:46:42 2007                        Michael Jennings (mej)

New tool -- pkgrepotool -- for managing package repositories.  Lots to
come here; it's nowhere near done yet. :)
----------------------------------------------------------------------
Tue Feb 27 19:54:19 2007                        Michael Jennings (mej)

More repo tool work.
----------------------------------------------------------------------